Fixed about page vertical overflow

--- a/frontendts/styles/about.module.scss
+++ b/frontendts/styles/about.module.scss
@@ -19,6 +19,8 @@
   width: 100%;
   height: 100%;
 
+  overflow-x: hidden;
+
   section.charbox {
     display: flex;
     flex-direction: column;
